examples/test/testpolicy5022.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5022
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key21: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value27
          key36: value17
          key12: value21
      podSelector:
        matchLabels:
          key20: value32
          key0: value28
